--- a/CMMedia-Master-Tool/packages.config
+++ b/CMMedia-Master-Tool/packages.config
@@ -1,9 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Microsoft.Data.Sqlite" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Data.Sqlite.Core" version="2.0.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Otp.NET" version="1.2.2" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net472" />
   <package id="Selenium.Chrome.WebDriver" version="85.0.0" targetFramework="net472" />
   <package id="Selenium.Support" version="4.1.0" targetFramework="net472" />
   <package id="Selenium.WebDriver" version="4.1.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="100.0.4896.6000" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.1.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.7" targetFramework="net472" />
+  <package id="SQLitePCLRaw.core" version="2.1.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.1.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.7" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.osx" version="1.1.7" targetFramework="net472" />
+  <package id="SQLitePCLRaw.lib.e_sqlite3.v110_xp" version="1.1.7" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.dynamic_cdecl" version="2.1.2" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3" version="2.0.6" targetFramework="net472" />
+  <package id="SQLitePCLRaw.provider.e_sqlite3.net45" version="1.1.7" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
 </packages>
